<resources>
    <string name="app_name">V-Clock</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="gender_array">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="Message">请输入手机号</string>
    <string name="next">下一步</string>
    <string name="signUp">注册</string>
    <string name="my_guest">我的嘉宾</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="guest_num_10">10</string>
    <string name="guest_name">隔壁小王</string>
    <string name="add_guest">添加嘉宾</string>
    <string name="name">姓名:</string>
    <string name="company">单位:</string>
    <string name="phone">手机:</string>
    <string name="sex">性别:</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="add">添加</string>
    <string name="title_notifications">消息</string>
    <string name="title_guests">嘉宾</string>
    <string name="title_history">历史</string>
    <string name="title_me">我的</string>
    <string name="register_name">姓名：</string>
    <string name="register_sex">性别：</string>
    <string name="register_male">男</string>
    <string name="register_female">女</string>
    <string name="register_phone">手机：</string>
    <string name="register_next">下一步</string>
    <string name="register_add_photo">添加照片</string>
    <string name="register_take_photo">拍照</string>
    <string name="register_album">相册</string>
    <string name="register_complete">完成</string>
    <string name="fragment_me_title">我的</string>
    <string name="fragment_history_title">历史</string>
    <string name="fragment_me_sign_out">退出账号</string>
    <string name="fragment_message_title">消息</string>
    <string name="guest_info">嘉宾信息</string>
    <string name="save">保存</string>
    <string name="fragment_me_edit">编辑</string>
    <string name="update_password">更新密码</string>

    <item type="id" name="myGuest">0</item>
    <item type="id" name="allGuest">1</item>
</resources>
